[UI] Fix username overflow in the avatar menu

--- a/app/javascript/src/styles/views/application/_avatar.scss
+++ b/app/javascript/src/styles/views/application/_avatar.scss
@@ -296,6 +296,7 @@ div.savm-profile {
       font-size: 1rem;
       max-width: 8.5rem;
       overflow: hidden;
+      white-space: nowrap;
     }
 
     span.savm-profile-title {
